# CS-EBOT-LEGACY

./: Dockerfile.i386
.github/workflows/: main.yml
include/: clib.h  core.h  engine.h  runtime.h  sse_mathfun.h
project/: CMakeLists.txt
source/: basecode.cpp  chatlib.cpp  combat.cpp  interface.cpp  navigate.cpp  support.cpp  waypoint.cpp
